Servidor Base de Datos/[Compi2]Proyecto1_201213587/src/Analisis/Usql/usqlGrammar.java
/* usqlGrammar.java */
/* Generated By:JavaCC: Do not edit this line. usqlGrammar.java */
package Analisis.Usql;

import Funciones.Usql.*;
import Static.*;
import java.util.ArrayList;
import EjecucionUsql.*;

public class usqlGrammar implements usqlGrammarConstants {
  public static void main(String args[]) throws ParseException {
    usqlGrammar parser = new usqlGrammar(System.in);
    parser.S();
  }

  final public EjecucionUsql S() throws ParseException {ArrayList<Simbolo> s = new ArrayList<Simbolo>();
System.out.println("Comienza!!");
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_CREAR:
    case T_USAR:
    case T_ALTERAR:
    case T_ELIMINAR:
    case T_INSERTAR:
    case T_ACTUALIZAR:
    case T_BORRAR:
    case T_SELECCIONAR:
    case T_OTORGAR:
    case T_DENEGAR:
    case T_DECLARAR:
    case T_IMPRIMIR:
    case T_BACKUP_USQL:
    case T_BACKUP_COMPLETO:
    case T_RESTAURAR_USQL:
    case T_RESTAURAR_COMPLETO:
    case ID:{
      s = L_INSTRUCCION();
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      ;
    }
System.out.println("Exito!!");
{if ("" != null) return new EjecucionUsql(s);}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<Simbolo> L_INSTRUCCION() throws ParseException {ArrayList<Simbolo> l = new ArrayList<Simbolo>(); ArrayList<Simbolo> l2 = new ArrayList<Simbolo>();
    l = INSTRUCCION();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_CREAR:
    case T_USAR:
    case T_ALTERAR:
    case T_ELIMINAR:
    case T_INSERTAR:
    case T_ACTUALIZAR:
    case T_BORRAR:
    case T_SELECCIONAR:
    case T_OTORGAR:
    case T_DENEGAR:
    case T_DECLARAR:
    case T_IMPRIMIR:
    case T_BACKUP_USQL:
    case T_BACKUP_COMPLETO:
    case T_RESTAURAR_USQL:
    case T_RESTAURAR_COMPLETO:
    case ID:{
      l2 = L_INSTRUCCION();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      ;
    }
for(Simbolo sim : l2){
            l.add(sim);
        }
        {if ("" != null) return l;}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<Simbolo> INSTRUCCION() throws ParseException {ArrayList<Simbolo> l = new ArrayList<Simbolo>(); Simbolo s;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_CREAR:
    case T_USAR:
    case T_ALTERAR:
    case T_ELIMINAR:
    case T_BACKUP_USQL:
    case T_BACKUP_COMPLETO:
    case T_RESTAURAR_USQL:
    case T_RESTAURAR_COMPLETO:{
      l = DDL();
{if ("" != null) return l;}
      break;
      }
    case T_INSERTAR:
    case T_ACTUALIZAR:
    case T_BORRAR:
    case T_SELECCIONAR:{
      l = DML();
{if ("" != null) return l;}
      break;
      }
    case T_OTORGAR:
    case T_DENEGAR:{
      l = DCL();
{if ("" != null) return l;}
      break;
      }
    case T_DECLARAR:{
      l = DECLARACION();
{if ("" != null) return l;}
      break;
      }
    case ID:{
      LLAMADA_METODO();
{if ("" != null) return l;}
      break;
      }
    case T_IMPRIMIR:{
      s = IMPRIMIR();
l.add(s); {if ("" != null) return l;}
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Simbolo IMPRIMIR() throws ParseException {Token t; FNodoExpresion exp;
    t = jj_consume_token(T_IMPRIMIR);
    jj_consume_token(PAR_IZQ);
    exp = LOGICA_OR();
    jj_consume_token(PAR_DER);
    jj_consume_token(PCOMA);
FImprimir f = new FImprimir(exp);
        Simbolo s = new Simbolo(Constante.TImprimir, Constante.TImprimir, Constante.TImprimir, f.Ambito, null, t.beginLine, t.beginColumn);
        {if ("" != null) return s;}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<Simbolo> DDL() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_USAR:{
      jj_consume_token(T_USAR);
      jj_consume_token(ID);
      jj_consume_token(PCOMA);
      break;
      }
    case T_CREAR:{
      CREATE();
      break;
      }
    case T_ALTERAR:{
      ALTER();
      break;
      }
    case T_ELIMINAR:{
      ELIMINAR();
      break;
      }
    case T_BACKUP_USQL:
    case T_BACKUP_COMPLETO:{
      BACKUP();
      break;
      }
    case T_RESTAURAR_USQL:
    case T_RESTAURAR_COMPLETO:{
      RESTAURAR();
{if ("" != null) return null;}
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<Simbolo> DML() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_INSERTAR:{
      INSERTAR();
      break;
      }
    case T_ACTUALIZAR:{
      ACTUALIZAR();
      break;
      }
    case T_BORRAR:{
      BORRAR();
      break;
      }
    case T_SELECCIONAR:{
      SELECCIONAR();
      jj_consume_token(PCOMA);
{if ("" != null) return null;}
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<Simbolo> DCL() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_OTORGAR:{
      jj_consume_token(T_OTORGAR);
      jj_consume_token(ID);
      jj_consume_token(COMA);
      jj_consume_token(ID);
      jj_consume_token(PUNTO);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case POR:{
        jj_consume_token(POR);
        break;
        }
      case ID:{
        jj_consume_token(ID);
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(PCOMA);
      break;
      }
    case T_DENEGAR:{
      jj_consume_token(T_DENEGAR);
      jj_consume_token(ID);
      jj_consume_token(COMA);
      jj_consume_token(ID);
      jj_consume_token(PUNTO);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case POR:{
        jj_consume_token(POR);
        break;
        }
      case ID:{
        jj_consume_token(ID);
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(PCOMA);
{if ("" != null) return null;}
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<Simbolo> SSL() throws ParseException {ArrayList<Simbolo> ls = new ArrayList<Simbolo>(); Simbolo s; Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_DECLARAR:{
      ls = DECLARACION();
{if ("" != null) return ls;}
      break;
      }
    case ARROBA:{
      s = ASIGNACION();
ls.add(s); {if ("" != null) return ls;}
      break;
      }
    case T_SI:{
      s = SI();
ls.add(s); {if ("" != null) return ls;}
      break;
      }
    case T_SELECCIONA:{
      s = SELECCIONA();
ls.add(s); {if ("" != null) return ls;}
      break;
      }
    case T_PARA:{
      s = PARA();
ls.add(s); {if ("" != null) return ls;}
      break;
      }
    case T_MIENTRAS:{
      s = MIENTRAS();
ls.add(s); {if ("" != null) return ls;}
      break;
      }
    case T_DETENER:{
      t = jj_consume_token(T_DETENER);
      jj_consume_token(PCOMA);
ls.add(new Simbolo(Constante.TDetener,Constante.TDetener, Constante.TDetener, new Ambito(Constante.TDetener, new ArrayList<Simbolo>()), null, t.beginLine, t.beginColumn)); {if ("" != null) return ls;}
      break;
      }
    case T_IMPRIMIR:{
      s = IMPRIMIR();
ls.add(s); {if ("" != null) return ls;}
      break;
      }
    case T_RETORNO:{
      s = RETORNO();
      jj_consume_token(PCOMA);
ls.add(s); {if ("" != null) return ls;}
      break;
      }
    case ID:{
      s = LLAMADA_METODO();
ls.add(s); {if ("" != null) return ls;}
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Simbolo LLAMADA_METODO() throws ParseException {Token t; ArrayList<FNodoExpresion> le = new ArrayList<FNodoExpresion>();
    t = jj_consume_token(ID);
    jj_consume_token(PAR_IZQ);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MENOS:
    case NOT:
    case T_FECHA:
    case T_FECHA_HORA:
    case T_CONTAR:
    case CADENA:
    case ENTERO:
    case FALSO:
    case VERDADERO:
    case DECIMAL:
    case ID:
    case ARROBA:
    case DATE:{
      le = L_EXPRESIONES();
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    jj_consume_token(PAR_DER);
    jj_consume_token(PCOMA);
FLlamadaMetodo lm = new FLlamadaMetodo(t.image, le, t.beginLine, t.beginColumn);
        {if ("" != null) return new Simbolo(Constante.TLlamadaMetodo, Constante.TLlamadaMetodo, Constante.TLlamadaMetodo, new Ambito(Constante.TLlamadaMetodo, new ArrayList<Simbolo>()), lm, t.beginLine, t.beginColumn);}
    throw new Error("Missing return statement in function");
  }

  final public void CREATE() throws ParseException {
    jj_consume_token(T_CREAR);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_BASE_DATOS:
    case T_TABLA:
    case T_OBJETO:
    case T_USUARIO:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case T_BASE_DATOS:{
        CREATE_BASE();
        break;
        }
      case T_TABLA:{
        CREATE_TABLA();
        break;
        }
      case T_OBJETO:{
        CREATE_OBJETO();
        break;
        }
      case T_USUARIO:{
        CREATE_USUARIO();
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(PCOMA);
      break;
      }
    case T_PROCEDIMIENTO:{
      CREATE_PROCEDIMIENTO();
      break;
      }
    case T_FUNCION:{
      CREATE_FUNCION();
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void CREATE_BASE() throws ParseException {
    jj_consume_token(T_BASE_DATOS);
    jj_consume_token(ID);
  }

  final public void CREATE_TABLA() throws ParseException {
    jj_consume_token(T_TABLA);
    jj_consume_token(ID);
    jj_consume_token(PAR_IZQ);
    L_CAMPO();
    jj_consume_token(PAR_DER);
  }

  final public void L_CAMPO() throws ParseException {
    CAMPO();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case COMA:{
      jj_consume_token(COMA);
      L_CAMPO();
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      ;
    }
  }

  final public void CAMPO() throws ParseException {
    TIPO_DATO();
    jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_NULO:
    case T_NO_NULO:
    case T_AUTOINCREMETABLE:
    case T_LLAVE_PRIMARIA:
    case T_LLAVE_FORANEA:{
      L_COMPLEMENTO();
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      ;
    }
  }

  final public String TIPO_DATO() throws ParseException {Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_TEXT:{
      t = jj_consume_token(T_TEXT);
{if ("" != null) return Tools.ttext;}
      break;
      }
    case T_INTEGER:{
      t = jj_consume_token(T_INTEGER);
{if ("" != null) return Tools.tinteger;}
      break;
      }
    case T_DOUBLE:{
      t = jj_consume_token(T_DOUBLE);
{if ("" != null) return Tools.tdouble;}
      break;
      }
    case T_BOOL:{
      t = jj_consume_token(T_BOOL);
{if ("" != null) return Tools.tbool;}
      break;
      }
    case T_DATE:{
      t = jj_consume_token(T_DATE);
{if ("" != null) return Tools.tdate;}
      break;
      }
    case T_DATETIME:{
      t = jj_consume_token(T_DATETIME);
{if ("" != null) return Tools.tdatetime;}
      break;
      }
    case ID:{
      t = jj_consume_token(ID);
{if ("" != null) return t.image;}
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public void L_COMPLEMENTO() throws ParseException {
    COMPLEMENTO();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_NULO:
    case T_NO_NULO:
    case T_AUTOINCREMETABLE:
    case T_LLAVE_PRIMARIA:
    case T_LLAVE_FORANEA:{
      L_COMPLEMENTO();
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      ;
    }
  }

  final public void COMPLEMENTO() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_NULO:{
      jj_consume_token(T_NULO);
      break;
      }
    case T_NO_NULO:{
      jj_consume_token(T_NO_NULO);
      break;
      }
    case T_AUTOINCREMETABLE:{
      jj_consume_token(T_AUTOINCREMETABLE);
      break;
      }
    case T_LLAVE_PRIMARIA:{
      jj_consume_token(T_LLAVE_PRIMARIA);
      break;
      }
    case T_LLAVE_FORANEA:{
      jj_consume_token(T_LLAVE_FORANEA);
      jj_consume_token(ID);
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void CREATE_OBJETO() throws ParseException {
    jj_consume_token(T_OBJETO);
    jj_consume_token(ID);
    jj_consume_token(PAR_IZQ);
    L_ATRIBUTO();
    jj_consume_token(PAR_DER);
  }

  final public void L_ATRIBUTO() throws ParseException {
    ATRIBUTO();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case COMA:{
      jj_consume_token(COMA);
      L_ATRIBUTO();
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      ;
    }
  }

  final public void ATRIBUTO() throws ParseException {
    TIPO_DATO_ATRIBUTO();
    jj_consume_token(ID);
  }
